# version

./: LICENSE  README.md  SPEC.md  VERSION  format_test.go  go.mod  go.sum  makefile
.github/workflows/: lint_and_test.yml
go/: .gitignore  README.md  format.go  format_test.go  go.mod  makefile  read.go  read_test.go
go/cmd/generate-version/: main.go  main_test.go
python/: .gitignore  README.md  makefile  pyproject.toml  tox.ini
python/tests/: test_format.py  test_semver_validation.py
python/version/: __init__.py  _format.py  generate.py
rust/: Cargo.toml  README.md  makefile
rust/src/: lib.rs
